# imap-tools-rs

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.sh  cov.sh  renovate.json  rustfmt.toml
.cargo/: config.toml
src/: lib.rs  main.rs  run.rs  test_helpers.rs
src/commands/: archive.rs  clean.rs  commands.rs  find_dups.rs  list.rs  mod.rs
src/commands/imap/: create.rs  delete.rs  disk_usage.rs  list.rs  mod.rs
src/commands/imap/snapshots/: imap_tools__commands__imap__disk_usage__tests__disk_usage_sort_by_name.snap  imap_tools__commands__imap__disk_usage__tests__disk_usage_sort_by_name_desc.snap  imap_tools__commands__imap__disk_usage__tests__disk_usage_sort_by_size.snap  imap_tools__commands__imap__disk_usage__tests__disk_usage_sort_by_size_desc.snap
src/libs/: args.rs  auth.rs  base_config.rs  config.rs  error.rs  filter.rs  filters.rs  imap.rs  mod.rs  mode.rs  render.rs  single_or_array.rs
src/libs/auth/: cram_md5.rs  mod.rs  plain.rs  scram.rs  xoauth2.rs
src/libs/render/: csv.rs  cursive.rs  json.rs  mod.rs  print.rs  terminal.rs  traits.rs
