[package]
name = "imap-tools"
version = "1.4.2"
edition = "2021"
license = "MIT"
description = "A collection of tools to manipulate IMAP mailboxes"
readme = "README.md"
keywords = ["IMAP"]
homepage = "https://gitlab.com/mat813/imap-tools-rs"
repository = "https://gitlab.com/mat813/imap-tools-rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

# cargo watch -x "build --profile dev-rustls --no-default-features -F rustls" -x "build --profile dev-openssl --no-default-features -F openssl"
[profile.dev-openssl]
inherits = "dev"

[profile.dev-rustls]
inherits = "dev"

[features]
default = ["openssl"]
openssl = ["imap/default"]
ratatui = ["ratatui/default"]
rustls = ["imap/rustls-tls"]

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.26", features = ["derive"] }
imap = { version = "3.0.0-alpha.14", default-features = false, optional = true }
imap-proto = "0.16.5"
once_cell = "1.20.2"
ratatui = { version = "0.29.0", optional = true }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde-value = "0.7.0"
serde_any = { version = "0.5.0", default-features = false, features = ["json", "toml", "yaml"] }
shell-words = "1.1.0"
size = { version = "0.5.0-preview2", features = ["serde"] }
strfmt = "0.2.4"

[dev-dependencies]
tempfile = "3.17.1"
